<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivLogLogo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="55dp"
            android:scaleType="fitCenter"
            android:src="@drawable/mediax_png_logo" />


        <ImageView
            android:id="@+id/ivSignIn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="Sign in text on registration activity"
            android:src="@drawable/sign_in" />


        <EditText
            android:id="@+id/l_edt_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rect2"
            android:drawableStart="@drawable/icon_person"
            android:drawableLeft="@drawable/icon_person"
            android:drawablePadding="10dp"
            android:hint="@string/emailReg"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/text_white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />


        <EditText
            android:id="@+id/l_edt_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_rect2"
            android:drawableStart="@drawable/icon_password"
            android:drawableLeft="@drawable/icon_password"
            android:drawablePadding="10dp"
            android:hint="@string/passwordReg"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/text_white"
            android:textColorHint="@color/gray"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:text="@string/forgot_password"
            android:textColor="@color/gray" />


        <Button
            android:id="@+id/l_btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btnsignin_gradient"
            android:text="@string/sign_inLog"
            android:textColor="#FFFFFF" />


        <ImageView
            android:id="@+id/btnTweeter"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Social site button"
            android:src="@drawable/btn_twitter" />


        <TextView
            android:id="@+id/l_txt_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/signup_redirect"
            android:textColor="@color/text_white" />


    </LinearLayout>


</RelativeLayout>