<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/me_userimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:foregroundGravity="center"
            android:scaleType="center"
            android:src="@drawable/male_vactor_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/me_txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="AD"
                android:textColor="@color/text_white"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/me_btn_setting"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/me_btn_gradient_bg"
                android:drawableLeft="@drawable/ic_settings"
                android:drawablePadding="10sp"
                android:gravity="left"
                android:text="@string/setting"
                android:textColor="#FFFFFF" />


            <Button
                android:id="@+id/me_btn_helpFeed"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/me_btn_gradient_bg"
                android:drawableLeft="@drawable/ic_feedback"
                android:drawablePadding="10sp"
                android:gravity="left"
                android:text="@string/help_feedback"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/me_btn_share"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/me_btn_gradient_bg"
                android:drawableLeft="@drawable/ic_share"
                android:drawablePadding="10sp"
                android:gravity="left"
                android:text="@string/share_mediax"
                android:textColor="#FFFFFF" />


            <Button
                android:id="@+id/me_btn_about"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/me_btn_gradient_bg"
                android:drawableLeft="@drawable/ic_about"
                android:drawablePadding="10sp"
                android:gravity="left"
                android:text="@string/about_us"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/me_btn_logOut"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_gravity="left"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:background="@drawable/me_btn_gradient_bg"
                android:drawableLeft="@drawable/ic_logout"
                android:drawablePadding="10sp"
                android:gravity="left"
                android:text="@string/log_out"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5sp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/txt_copyright"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="10dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="@string/version_info"
                android:textColor="@color/cardview_dark_background"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_copyright"

                android:layout_marginBottom="80dp"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="Made By Adnan Mahida"
                android:textColor="@color/text_white"
                android:textSize="15sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>