<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".Activities.MovieDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/d_movie_img"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/d_floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/d_movie_img"
                app:layout_constraintEnd_toEndOf="@+id/d_movie_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_play" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/d_txt_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:fontFamily="serif"
                android:padding="5sp"
                android:text="Movie Name"
                android:textAlignment="viewStart"
                android:textColor="@color/text_white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans" />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:padding="5sp"
                android:text="@string/stars"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/d_txt_stars"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-light"
                android:lines="2"
                android:padding="5sp"
                android:text="@string/version_info"
                android:textAlignment="viewStart"
                android:textColor="@color/text_white"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.9dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="serif"
                android:padding="5sp"
                android:text="@string/story"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/d_txt_story"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-condensed-light"
                android:lines="5"
                android:padding="5sp"
                android:text="@string/version_info"
                android:textAlignment="viewStart"
                android:textColor="@color/text_white"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:fontFamily="serif"
                android:text="@string/that_s_it"
                android:textAlignment="center"
                android:textColor="@color/text_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>